# osm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
pt/: 5asec.py  agriloja.py  aldi.py  amanhecer.py  auchan.py  audika.py  bricomarche.py  burgerking.py  burgerranch.py  celeiro.py  century21.py  cgd.py  chip7.py  continente.py  decathlon.py  element.py  emel.py  era.py  espacocasa.py  froiz.py  gleba.py  index.html  index.py  jysk.py  kidtokid.py  lidl.py  maxmat.py  mcdonalds.py  mercadona.py  meusuper.py  minisom.py  novobanco.py  pingodoce.py  radiopopular.py  recheio.py  remax.py  roady.py  santander.py  schools.py  solinca.py  (+11 more)
pt/impl/: common.py  config.py
pt/templates/: diff.jinja  diff_html.jinja  diff_osm.jinja
