[project]
name = "osm"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "humanize (>=4.12.3,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "retrying (>=1.3.4,<2.0.0)",
]

[tool.poetry]
package-mode = false
